Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19870

gcol.innodb_virtual_debug_purge doesn't fail if row_vers_old_has_index_entry gives wrong result

    XMLWordPrintable

Details

    Description

      The attached patch changes the value returned for row_vers_old_has_index_entry().
      But there is no failure with the virtual column test case. Write a valid test case and
      improve the coverage.

      Attachments

        Activity

          People

            thiru Thirunarayanan Balathandayuthapani
            thiru Thirunarayanan Balathandayuthapani
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1.5h
                1.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.